<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioGroup
                android:id="@+id/mode_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/login_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_choice"
                    android:layout_marginStart="20dp"
                    android:textSize="15sp"
                    android:checked="true"/>
                <RadioButton
                    android:id="@+id/register_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_choice"
                    android:textSize="15sp"
                    android:layout_marginStart="20dp"/>
            </RadioGroup>
        </LinearLayout>

        <ImageButton
            android:id="@+id/head"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@mipmap/add"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:visibility="gone"
            android:scaleType="fitCenter"/>
        <EditText
            android:id="@+id/username_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/username_hint"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/newpassword_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/newpassword_hint"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/confirmpassword_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/confirmpassword_hint"
            android:textSize="20sp"
            android:visibility="gone"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">
            <Button
                android:id="@+id/ok_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ok_button"
                android:layout_marginStart="20dp"/>
            <Button
                android:id="@+id/clear_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clear_button"
                android:layout_marginStart="10dp"/>
        </LinearLayout>
    </LinearLayout>


</android.support.constraint.ConstraintLayout>